# rustdoc-reflection

./: .gitignore  .release-plz.toml  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml  release-pr.yml
rustdoc_ext/: Cargo.toml  README.md
rustdoc_ext/src/: lib.rs
rustdoc_ir/: Cargo.toml  README.md
rustdoc_ir/src/: canonical_path_resolver.rs  lib.rs  lifetime.rs  type_.rs
rustdoc_processor/: Cargo.toml  README.md
rustdoc_processor/src/: collection.rs  lib.rs
rustdoc_processor/src/cache/: mod.rs  third_party.rs  toolchain.rs
rustdoc_processor/src/compute/: orchestration.rs
rustdoc_processor/src/indexing/: import_index.rs  mod.rs  re_exports.rs
rustdoc_processor/src/queries/: mod.rs
rustdoc_resolver/: Cargo.toml  README.md
rustdoc_resolver/src/: resolve_type.rs  type_def.rs
