[workspace]
members = [
    "rustdoc_ext",
    "rustdoc_ir",
    "rustdoc_processor",
    "rustdoc_resolver",
]
resolver = "3"

[workspace.package]
edition = "2024"
repository = "https://github.com/LukeMathWalker/rustdoc-reflection"
homepage = "https://github.com/LukeMathWalker/rustdoc-reflection"
license = "Apache-2.0"

[workspace.dependencies]
rustdoc_ext = { path = "rustdoc_ext", version = "0.1.0" }
rustdoc_ir = { path = "rustdoc_ir", version = "0.1.0" }
rustdoc_processor = { path = "rustdoc_processor", version = "0.1.0" }
rustdoc_resolver = { path = "rustdoc_resolver", version = "0.1.0" }

rustdoc-types = { version = "0.57.3", features = ["rustc-hash", "rkyv_0_8"] }
ahash = "0.8"
anyhow = "1.0.100"
bimap = "0.6.3"
bincode = "2"
camino = "1"
elsa = "1.11.2"
fs-err = "3"
globwalk = "0.9.1"
guppy = "0.17.23"
indexmap = "2"
itertools = "0.14"
num_cpus = "1.17.0"
once_cell = "1.21.3"
r2d2 = "0.8"
r2d2_sqlite = "0.25.0"
rayon = "1.11"
rkyv = { version = "0.8", default-features = false, features = ["std"] }
rusqlite = "0.32"
rustc-hash = "2"
semver = "1.0.27"
serde = "1.0.228"
serde_json = "1.0.145"
serde_stacker = "0.1"
syn = "2.0"
thiserror = "2"
toml = "0.9.10"
tracing = { version = "0.1.44", default-features = false }
tracing_log_error = "0.1"
xxhash-rust = "0.8.15"
