[package]
name = "rustdoc_ext"
description = "Extension traits for rustdoc-types"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
version = "0.1.1"
keywords = ["rustdoc-json", "reflection", "rustdoc"]
categories = ["development-tools"]

[dependencies]
guppy = { workspace = true }
rustdoc-types = { workspace = true }
