[package]
name = "rustdoc_ir"
description = "An Intermediate Representation for Rust types and functions"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
version = "0.1.1"
keywords = ["rustdoc-json", "reflection", "rustdoc"]
categories = ["development-tools", "data-structures"]

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
bimap = { workspace = true }
guppy = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
syn = { workspace = true }
rustdoc-types = { workspace = true }
rustdoc_ext = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
